--- a/posts/templates/posts/_new_post_form.html
+++ b/posts/templates/posts/_new_post_form.html
@@ -3,7 +3,7 @@
     <div class="input-group mb-1">
         {{ post_form.title }}
         <div class="input-group-append">
-            <button name="tets-post" class="btn btn-outline-info newPost" name="{{ aform.prefix }}" type="submit">
+            <button class="btn btn-outline-info newPost" type="submit">
                 Post
             </button>
         </div>
