Scroll to new comment from notifications tab and change its color

--- a/base/static/style.css
+++ b/base/static/style.css
@@ -217,6 +217,9 @@ body.modal-open div.modal-backdrop {
     display: none;
 }
 
+.comments:target {
+    background-color: #FFA;
+}
 
 .notification-counter {
     background-color: #B9EDFD;
