--- a/posts/templates/posts/view_post.html
+++ b/posts/templates/posts/view_post.html
@@ -6,7 +6,7 @@
 {% endblock title %}
 {% block content %}
     <div class="row">
-        <div class="col-12 pr-1 pl-1">
+        <div class="col-12 pr-1 pl-1" id="view-post-view">
             {% include "posts/_post_base.html" %}
         </div>
     </div>
