Changed view_post template post_base

--- a/posts/templates/posts/view_post.html
+++ b/posts/templates/posts/view_post.html
@@ -7,7 +7,7 @@
 {% block content %}
     <div class="row">
         <div class="col-12 pr-1 pl-1" id="view-post-view">
-            {% include "posts/_post_base.html" %}
+            {% include "posts/_view_post_base.html" %}
         </div>
     </div>
 {% endblock content %}
