Remove email verification

--- a/accounts/templates/accounts/account_created.html
+++ b/accounts/templates/accounts/account_created.html
@@ -6,12 +6,12 @@
 {% block content %}
     <div class="content-section">
         <h2 class="text-center long-page">
-            Your account has been successfully created. Please verify your e-mail to be able to 
+            Your account has been successfully created. Please 
             <span>
                 <a href="{% url 'login' %}">
                     sign in
-                </a>
-            </span>.
+                </a>.
+            </span>
         </h2>
     </div>
 {% endblock content %}
